@@ -64,7 +64,6 @@ END_PERL
 }
 
 my %known_bad = map { ( "package $_" => 1 ) }
-  'v10 0.50 ;', 'v10 0.50 { 1 }', 'v10 0.50;', 'v10 0.50{ 1 }', 'v10 ;', 'v10 v1.2.3 ;', 'v10 v1.2.3 { 1 }', 'v10 v1.2.3;', 'v10 v1.2.3{ 1 }', 'v10 { 1 }',
   'x64 0.50 ;', 'x64 0.50 { 1 }', 'x64 0.50;', 'x64 0.50{ 1 }', 'x64 ;', 'x64 v1.2.3 ;', 'x64 v1.2.3 { 1 }', 'x64 v1.2.3;', 'x64 v1.2.3{ 1 }', 'x64 { 1 }',
   ;
 
